# remote-control

./: .gitignore  README.md  capturing.py  install.sh  pyproject.toml  remote_control.py  requirements.txt  run.sh  uninstall.sh
certs/: gen_keys.sh
