[project]
name = "remote-control"
version = "0.1.0"
description = "A remote control server"
authors = [
    {name = "Máté Fehérvári",email = "matefehervari24@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "blinker==1.9.0",
    "click==8.1.8",
    "dotenv==0.9.9",
    "Flask==3.1.0",
    "flask-cors==5.0.1",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "pillow==11.2.1",
    "python-dotenv==1.1.0",
    "Werkzeug==3.1.3",
    "pywin32 (>=311,<312) ; sys_platform == \"win32\"",
    "keyboard (>=0.13.5,<0.14.0) ; sys_platform == \"win32\"",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
